@@ -1,5 +1,6 @@
 Version 2.02.95 -
 ================================
+  Deactivation of failed thin check on thin pool returns success.
   Scan all devices for lvmetad if 'pvscan --cache' used without device list.
   Populate lvmcache from lvmetad before displaying PVs in pvscan. (2.02.94)
   Suppress incorrect -n pvscan warning now always displayed. (2.02.94)
